--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -8,4 +8,4 @@
         cache_valid_time: 3600
       when: ansible_os_family == "Debian"
 
-- import_playbook: /home/ggeorgiev/ansible-apache2/main.yml
+- import_playbook: ../ansible-apache2/main.yml
